--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,5 +1,6 @@
 JWT_SIGNING_KEY="replace-with-32-byte-random-secret"
 ADMIN_API_KEY="replace-with-long-admin-api-key"
+APP_URL="http://127.0.0.1:8787"
 OAUTH_GOOGLE_CLIENT_ID=""
 OAUTH_GOOGLE_CLIENT_SECRET=""
 OAUTH_GOOGLE_REDIRECT_URI="http://127.0.0.1:8787/v1/oauth/google/callback"
