feat: add email verification, password reset, and session management flows

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,6 +1,9 @@
 JWT_SIGNING_KEY="replace-with-32-byte-random-secret"
 ADMIN_API_KEY="replace-with-long-admin-api-key"
 APP_URL="http://127.0.0.1:8787"
+EMAIL_VERIFICATION_TTL_SECONDS="900"
+PASSWORD_RESET_TTL_SECONDS="900"
+EXPOSE_TEST_TOKENS="true"
 OAUTH_GOOGLE_CLIENT_ID=""
 OAUTH_GOOGLE_CLIENT_SECRET=""
 OAUTH_GOOGLE_REDIRECT_URI="http://127.0.0.1:8787/v1/oauth/google/callback"
