feat: run evolver in loop mode and add D1 auth rate limits

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -5,6 +5,9 @@ PUBLIC_AUTH_URL="http://127.0.0.1:8787"
 CORS_ORIGINS="http://127.0.0.1:8787"
 EMAIL_VERIFICATION_TTL_SECONDS="900"
 PASSWORD_RESET_TTL_SECONDS="900"
+AUTH_RATE_LIMIT_ENABLED="true"
+AUTH_RATE_LIMIT_MAX_REQUESTS="120"
+AUTH_RATE_LIMIT_WINDOW_SECONDS="60"
 EXPOSE_TEST_TOKENS="true"
 EMAIL_FROM="PajamaDot Auth <noreply@example.com>"
 RESEND_API_BASE_URL="https://api.resend.com"
