--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,9 @@ ACCESS_TOKEN_TTL_SECONDS = "900"
 REFRESH_TOKEN_TTL_SECONDS = "2592000"
 EMAIL_VERIFICATION_TTL_SECONDS = "900"
 PASSWORD_RESET_TTL_SECONDS = "900"
+AUTH_RATE_LIMIT_ENABLED = "true"
+AUTH_RATE_LIMIT_MAX_REQUESTS = "120"
+AUTH_RATE_LIMIT_WINDOW_SECONDS = "60"
 COOKIE_NAME = "pj_auth_refresh"
 COOKIE_DOMAIN = ""
 GOOGLE_DEFAULT_SCOPE = "openid email profile"
