feat: add passkeys policy engine projects and risk scoring

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -8,6 +8,9 @@ PASSWORD_RESET_TTL_SECONDS="900"
 AUTH_RATE_LIMIT_ENABLED="true"
 AUTH_RATE_LIMIT_MAX_REQUESTS="120"
 AUTH_RATE_LIMIT_WINDOW_SECONDS="60"
+TURNSTILE_ENABLED="false"
+TURNSTILE_SECRET_KEY=""
+TURNSTILE_API_BASE_URL="https://challenges.cloudflare.com"
 EXPOSE_TEST_TOKENS="true"
 EMAIL_FROM="PajamaDot Auth <noreply@example.com>"
 RESEND_API_BASE_URL="https://api.resend.com"
