--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,6 +17,8 @@ PASSWORD_RESET_TTL_SECONDS = "900"
 AUTH_RATE_LIMIT_ENABLED = "true"
 AUTH_RATE_LIMIT_MAX_REQUESTS = "120"
 AUTH_RATE_LIMIT_WINDOW_SECONDS = "60"
+TURNSTILE_ENABLED = "false"
+TURNSTILE_API_BASE_URL = "https://challenges.cloudflare.com"
 COOKIE_NAME = "pj_auth_refresh"
 COOKIE_DOMAIN = ""
 GOOGLE_DEFAULT_SCOPE = "openid email profile"
