--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -16,6 +16,7 @@ EMAIL_FROM="PajamaDot Auth <noreply@example.com>"
 RESEND_API_BASE_URL="https://api.resend.com"
 RESEND_API_KEY=""
 KMS_MASTER_KEY=""
+SAML_XMLSIG_MODE="optional"
 OAUTH_GOOGLE_CLIENT_ID=""
 OAUTH_GOOGLE_CLIENT_SECRET=""
 OAUTH_GOOGLE_REDIRECT_URI="http://127.0.0.1:8787/v1/oauth/google/callback"
